# Image_sender_reciver_UDP

./: CMakeLists.txt  README.md
bmp_sender_client/: CMakeLists.txt  json_client.cpp  main.cpp
udp_client/: CMakeLists.txt  main.cpp  opengl_widget.cpp  opengl_widget.h  udp_client.cpp  udp_client.h
udp_server/: CMakeLists.txt  main.cpp  udp_server.cpp  udp_server.h
